--- a/Lenos/Areas/Manage/Views/Shared/_Layout.cshtml
+++ b/Lenos/Areas/Manage/Views/Shared/_Layout.cshtml
@@ -112,6 +112,12 @@
             <li class="nav-item">
                 <a class="nav-link" asp-controller="Order" asp-action="Index" asp-area="Manage"><i class="bi bi-cart2"></i>Order</a>
             </li>
+
+            <hr class="sidebar-divider my-0">
+
+            <li class="nav-item">
+                <a class="nav-link" asp-controller="Contacts" asp-action="Index" asp-area="Manage"><i class="bi bi-person-lines-fill"></i>Contacts</a>
+            </li>
         </ul>
         <!-- End of Sidebar -->
         <!-- Content Wrapper -->
