--- a/Lenos/Views/Account/Profile.cshtml
+++ b/Lenos/Views/Account/Profile.cshtml
@@ -5,11 +5,11 @@
     int orderItemCount = 0;
 }
 
-<main id="main">
+<main id="main" class="mb-5">
     <!-- Breadcrumb start -->
     <section class="page-breadcrumb">
         <div class="content">
-            <img src="assets/img/breadcrumb/banner.jpg" alt="">
+            <img src="~/assets/img/breadcrumb/banner.jpg" alt="">
             <div class="crumbcontent">
                 <h1>My Account</h1>
                 <div>
