--- a/Lenos/Views/Account/ResetPassword.cshtml
+++ b/Lenos/Views/Account/ResetPassword.cshtml
@@ -16,6 +16,8 @@
                             <div class="panel-body">
                                 <form class="form" method="post">
                                     <fieldset>
+                                        <input style="visibility:hidden;" asp-for="@Model.AppUser.Email"/>
+
                                         <div class="form-group">
                                             <div class="input-group">
                                                 <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
