--- a/Lenos/wwwroot/assets/css/style.css
+++ b/Lenos/wwwroot/assets/css/style.css
@@ -238,9 +238,6 @@ main .shop-section .tags h4 {
 
 main .shop-section .tags a {
   text-decoration: none;
-}
-
-main .shop-section .tags a span {
   border: 1px solid #EEEEEE;
   padding: 3px 6px;
   color: #76768C;
@@ -300,7 +297,7 @@ main .shop-section .product-option .filter .show-product p {
   margin-bottom: 0;
 }
 
-main .shop-section .product-option .filter .show-product span {
+main .shop-section .product-option .filter .show-product a {
   cursor: pointer;
   margin-right: 10px;
 }
@@ -334,8 +331,13 @@ main .shop-section .shop .box {
   margin-bottom: 20px;
 }
 
+main .shop-section .product-box .top .img img{
+    max-height: 250px;
+    object-fit: cover;
+}
+
 main .map-section {
-  padding-bottom: 3rem;
+    padding-bottom: 3rem;
 }
 
 main .map-section iframe {
@@ -2279,13 +2281,13 @@ header .header-bottom .right a {
   margin: 0 13px;
 }
 
-header .header-bottom .right a i {
+header .header-bottom .right a {
   font-size: 23px;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
 
-header .header-bottom .right a i:hover {
+header .header-bottom .right a:hover {
   color: #AE845F;
 }
 
@@ -2295,7 +2297,7 @@ header .header-bottom .right .relative {
 
 header .header-bottom .right .absolute {
   position: absolute;
-  top: -10px;
+  top: -4px;
   right: -8px;
   height: 20px;
   width: 21px;
@@ -2734,7 +2736,7 @@ main .product-box .top .img {
 
 main .product-box .top .img img {
   width: 100%;
-  max-height: 400px;
+  max-height: 350px;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -3182,6 +3184,8 @@ footer .bottom .right img {
 
 .product-modal .product-content .left .img img {
   width: 100%;
+  max-height: 500px;
+  object-fit: cover;
 }
 
 .product-modal .product-content .left .img:hover .slick-prev {
@@ -3598,3 +3602,13 @@ footer .bottom .right img {
   width: 100%;
 }
 /*# sourceMappingURL=style.css.map */
+.active-tag {
+    background-color: #AE845F !important;
+    color: #fff !important;
+}
+.active-countby {
+    color: #AE845F !important;
+}
+.active-category {
+    color: #AE845F !important;
+}
